Upgraded Quarkus, Maven and Java to latest versions